changes - fixed css transition when switching to dark mode

--- a/src/components/LastProject/LastProject.module.css
+++ b/src/components/LastProject/LastProject.module.css
@@ -1,5 +1,6 @@
 .Section {
   position: relative;
+  transition: var(--theme-transition);
 }
 .SectionDark {
   background: var(--mainColorLightThemeDark);
