--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,5 +1,6 @@
 .Projects {
   background: #f7f7f7;
+  transition: var(--theme-transition);
 }
 
 .ProjectsDark {
